# rtp-llm-rocm

src/fastertransformer/core/: allocator.h
src/fastertransformer/devices/: DeviceBase.h  DeviceData.h  DeviceFactory.cc
src/fastertransformer/devices/rocm_impl/: RocmDevice.cc  RocmDevice.h
src/fastertransformer/devices/rocm_impl/RocmOpsTest/: CMakeLists.txt  RocmOpsTest.cc
src/fastertransformer/devices/rocm_impl/rocm_impl/: CMakeLists.txt  Dispatch.h  RocmOps.cc
src/fastertransformer/devices/rocm_impl/tests/: RocmTestUtils.h
src/fastertransformer/devices/testing/: TestBase.h
src/fastertransformer/kernels/hip_kernel/: gpt_kernels.h  gpt_kernels.hip
src/fastertransformer/rocm/: allocator_rocm.cc  allocator_rocm.h
